# core-contracts

voting/: Cargo.toml
voting/src/: lib.rs
