[package]
name = "voting-contract"  # Build a Wasm file called voting-contract
version = "0.2.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "2.0.0"        # Use near-sdk-rs version 2.0.0

[profile.release]
codegen-units = 1
opt-level = "s"           # Optimize for small code size (https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=lto#opt-level)
lto = true                # Optimize for small code size (https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=lto#lto)
debug = false             # Do not include debug info (https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=lto#debug)
panic = "abort"           # Terminate process on panic (https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=lto#panic)
overflow-checks = true    # Panic on overflow (https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=lto#overflow-checks)

[workspace]
members = []
